# hv_battery_charger

./: .gitignore  CMakeLists.txt  LICENSE  README.md  task
.github/: ci.sh  setup.sh
.github/workflows/: ci.yaml
board/: CMakeLists.txt
board/inc/: application.h  stm32f3xx_hal_conf.h
board/src/: application.c  main.c  syscalls.c
cmake/: add_libs.cmake  compile_options.cmake  toolchain.cmake
core/: CMakeLists.txt
drivers/: CMakeLists.txt
drivers/inc/: buzzer.h  lcd.h  led_status.h  status.h
drivers/src/: buzzer.c  lcd.c  led_status.c
hal_conf/: CMakeLists.txt
ld/: STM32F334C8TX.ld
matlab/: BoostConverterModel_2phase_SubSystem.slx  BoostConverterModel_ControlSystem.c  BoostConverterModel_ControlSystem.h  BoostConverterModel_ControlSystem.slx  CMakeLists.txt  Controller.c  Controller.h  complex_types.h  rtwtypes.h
